--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <h1>{{ .Title }}</h1>
 
-{{ .PublishDate.Format "Jan. 2, 2006" }}
+{{ .PublishDate.Format "Jan 2, 2006" }}
 {{ with .Params.linkedin }}
     // <a href="{{ . }}">Linkedin</a>
 {{ end }}
