--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,8 @@
 {{ define "main" }}
 
-<h1>About</h1>
+<!-- <h1>About</h1>
 
-<p>
-Console is a minimal, responsive and light theme for Hugo inspired by Linux console.  <a href="about/">(more)</a>
-</p>
-<br/>
+<br/> -->
 
 <h1>Latest posts</h1>
 
